methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:8: error: value update is not a member of java.awt.Color
  if(getCouleurSol()=green){
     ^SlugTracking:8: error: not found: value green
  if(getCouleurSol()=green){
                     ^