methods.slug.SlugTracking.scala.code

def isFacingTrail():Boolean = {
  if(estFaceMur()){
    return false
  }
  avance()
  if(getCouleurSol()=green){
    recule()
    return true
  }
   else
    return false
    
  }